--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@ class: center, middle, inverse, title-slide
   z-index: 1; /* Under the text */
 }
 
-/* Adding the decorative icon background */
+/* Adding the dcorative icon backgrounde */
 .title-slide::after {
   content: "";
   position: absolute;
@@ -135,20 +135,27 @@ class: center, bottom, inverse
 
 
 ---
-# Issue Identification
+# Location
 
 
-### City: Jakarta, Indonesia
+### Jakarta, Indonesia
 
-Jakarta is a member of the Asian Network of Major Cities 21, C40 Cities Climate Leadership Group and ASEAN Smart Cities Network.
+* Jakarta is the nation's **capital city** and the centre of the **largest metropolis** of Indonesia.
+
+* Jakarta covers **661.23 sq.km.** and has a population of **10,679,951** as of mid-2022.
+
+
+* Jakarta is the **economic**, **cultural**, and **political centre** of Indonesia.
+
+
+
+
 
 &lt;div style="display: flex; justify-content: center;"&gt;
   &lt;div style="flex: 1; margin-right: 10px;"&gt;
     &lt;img src="images/Jakarta.jpg" alt="Image description" style="max-width: 100%; height: auto;"&gt;
-
 &lt;/div&gt;
-
-
+  
 
 
 
@@ -167,22 +174,33 @@ Jakarta is a member of the Asian Network of Major Cities 21, C40 Cities Climate 
 
 
 
-## Problem：
+# Problem Definition
 
 .panelset[
 .panel[.panel-name[Food Insecurity]
 
 
-#### Poor population:
-Official statistics indicate that **3.48 %** of Jakarta’s residents – over 312,180 people – fall below the poverty line. Despite being a bustling metropolis, Jakarta still faces issues of food insecurity, particularly among low-income communities. 
+#### Poverty:
+
+**3.48 %** of Jakarta’s residents – over **312,180** people – fall below the poverty line. **low-income communities** have limited access to nutritious food. **High food prices**, and **inadequate distribution** systems contribute to this problem.  
 
 
-#### Food supply chain:
-Limited access to nutritious food, high food prices, and inadequate distribution systems contribute to this problem.  
+
 
 
 #### Land use:
-The city experiences a reduction in agricultural land converted into settlements and industrial land, as well as soil deterioration.​
+
+The city experiences a **agricultural land reduction**, whcich was converted into settlements and industrial land, as well as soil deterioration. 
+
+
+
+
+#### Flood:
+
+
+Jakarta are highly susceptible to flooding due to land subsidence and deltaic floodplain location. Flood happened recently in **1996**, **1999**, **2007**, **2013**, and **2020**. These special events poses challenges to the city's food supply.
+
+
 
 ]
 
@@ -215,9 +233,18 @@ Source: [Jakarta urban heat Island](https://www-sciencedirect-com.libproxy.ucl.a
 
 
 
+#### Severity：
+
+
+Jakarta was again ranked **the most polluted city** in the world by Swiss technology company IQAir.
+
+
+
 #### Vehicle emissions:
 
-The heavy traffic congestion in Jakarta contributes to poor air quality, with high levels of vehicle emissions and industrial pollutants. This pollution poses health risks to residents and has adverse effects on the environment.
+
+
+The transport sector contributed **67%** of PM2.5 emissions, **58%** of PM10 emissions, and **84%** of Black Carbon emissions in 2019. This pollution poses health risks to residents and has adverse effects on the environment.
 
 
 
@@ -234,6 +261,19 @@ The heavy traffic congestion in Jakarta contributes to poor air quality, with hi
 &lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
   &lt;img src="images/team_logo.png" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
+
+
+
+
+---
+
+
+
+class: inverse, middle, left
+
+
+# Objective:
+# Symbiotic coexistence of built environment and nature
 
 
 ---
@@ -291,19 +331,6 @@ The heavy traffic congestion in Jakarta contributes to poor air quality, with hi
 &lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
   &lt;img src="images/team_logo.png" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
-
-
-
----
-
-
-
-class: inverse, middle, left
-
-
-# Objective:
-# Symbiotic coexistence of built environment and nature
-
 
 
 
@@ -404,19 +431,23 @@ class: inverse, middle, left
 
 
 
+---
+
+class: inverse, middle, left
+
+# Solution:
+
+# Rooftop Farming and Gardening
 
 
 
 
+---
 
 
 
 
-
-
-
-
-
+# Prospective Outcomes
 
 
 
@@ -443,6 +474,14 @@ class: inverse, middle, left
 
 * Medium-Term Regional Medium-Term Plan (RPJMD) for 2007-2012, Jakarta (1) Spatial Planning Jakarta 2030. (1)
 
+
+
+###  Strategy for Air Pollution Control (SPPU)
+
+
+
+
+* Jakarta is a member of the **Asian Network of Major Cities 21**, **C40 Cities Climate Leadership Group** and **ASEAN Smart Cities Network**.
 
 
 
@@ -571,8 +610,9 @@ class: inverse, middle, left
 class: inverse, middle, left
 
 
-# Solution:
+# Methodology:
 # Using Remote Sensing for Identifying Rooftop Farming in Jakarta
+
 
 
 
