--- a/index.html
+++ b/index.html
@@ -437,23 +437,25 @@ class: inverse, middle, left
 ]
 
 
-.panel[.panel-name[Chicago]
+.panel[.panel-name[Washington D.C.]
 
 .pull-left[
-  &lt;img src="images/Case study_Motivation/casestudy3.jpeg"
+  &lt;img src="images/USACasestudy.png"
   height="270px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
   
   &lt;div style="font-size: 14px;"&gt; &lt;!-- The image source font size --&gt;
-  blablabla blablabla description blablabla Source: &lt;a
-  href="https://www.superindo.co.id/korporasi-keberlanjutan/superindoberkebun/gardening_info_detail/soft_openi
-  ng_super_indo_berkebun_rooftop_pondok_kelapa_jakarta"
-  style="color: #7910FF;"&gt;Originally from blabla, picture name&lt;/a&gt; &lt;!-- Hyper color --&gt;
+   Rooftop Gardening in Washington D.C.Source: &lt;a
+  href="https://land8.com/washington-d-c-leads-north-americas-10-green-roof-industry-growth-of-2013/"
+  style="color: #7910FF;"&gt;Originally from Green Roofs for Healthy Cities (GRHC), Green Roofs&lt;/a&gt; &lt;!-- Hyper color --&gt;
   &lt;!-- 额外图源记得写一下描述 --&gt;
   &lt;/div&gt;
 ]
 
 .pull-right[
-  Chicago Rooftop Gardening
+  * Incentive programs, the one launched in Washington D.C., offer financial support to building owners for installing green roofs, providing up to $15 per square foot in certain areas(Rudzinskas, Lutz, &amp; McElhinney, 2017).
+  
+  * These policies aim to lower the upfront costs of green roof installation, making it a more feasible option for improving air quality, reducing heat island effects, and enhancing urban green spaces. 
+
 ]
 
 ]
@@ -783,13 +785,13 @@ class: inverse, middle, left
 .panelset[
 .panel[.panel-name[SWOT]
 
-&lt;img src="images/SWOT1.png" height="450px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
+&lt;img src="images/SWOTUpdate.png" height="450px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
 
 ]
 
 .panel[.panel-name[Feasibility]
 
-&lt;img src="images/Feasibility1.png" height="500px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
+&lt;img src="images/FeasibilityUpdate.png" height="500px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
 
 ]
 
@@ -837,6 +839,23 @@ class: inverse, middle, left
 &lt;/div&gt;
 
 # Budget Breakdown
+
+.panelset[
+.panel[.panel-name[Personnel Budget]
+
+&lt;img src="images/personnelBudgetImage.png" height="400px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
+
+]
+
+.panel[.panel-name[Other Budget]
+
+&lt;img src="images/otherBudgetImage.png" height="450px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
+
+]
+
+
+]
+
 
 
 
