--- a/index.html
+++ b/index.html
@@ -408,23 +408,24 @@ class: inverse, middle, left
 ]
 
 
-.panel[.panel-name[Copenhagen]
+.panel[.panel-name[Manchester]
 
 .pull-left[
-  &lt;img src="images/Case study_Motivation/casestudy2.webp"
+  &lt;img src="images/MancityCaseStudy.png"
   height="270px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
   
   &lt;div style="font-size: 14px;"&gt; &lt;!-- The image source font size --&gt;
-  blablabla blablabla description blablabla Source: &lt;a
-  href="https://en.antaranews.com/news/256325/jakarta-distributes-hydroponic-racks-to-aid-urban-farming-in-pe
-  santren"
-  style="color: #7910FF;"&gt;Originally from blabla, picture name&lt;/a&gt; &lt;!-- Hyper color --&gt;
+  Roof level innovation offers climate resilient vision for Manchester Source: &lt;a
+  href="https://www.polypipe.com/news/roof-level-innovation-offers-climate-resilient-vision-manchester"
+  style="color: #7910FF;"&gt;Originally from Civils &amp; Green Urbanisation, Rooftop Greening in Mancity&lt;/a&gt; &lt;!-- Hyper color --&gt;
   &lt;!-- 额外图源记得写一下描述 --&gt;
   &lt;/div&gt;
 ]
 
 .pull-right[
-  * Jakarta (ANTARA) - The Jakarta Food Security, Marine, and Agriculture (KPKP)...
+  * Manchester developed a green roof strategy- Sustainable Cities: Options for Responding to Climate Change Impacts and Outcomes (SCORCHIO). Partnering with Manchester University, the project utilised an Urban Heat Island map to identify city areas susceptible to elevated temperatures exacerbated by climate change. 
+  
+  * Public buildings were selected as pilot projects for green roof retrofitting, focusing on reducing the heat island effect and air pollution. 
   
   &lt;br&gt; &lt;!-- 空行做排版，可自行删除 --&gt;
   &lt;br&gt;
@@ -454,7 +455,7 @@ class: inverse, middle, left
 .pull-right[
   * Incentive programs, the one launched in Washington D.C., offer financial support to building owners for installing green roofs, providing up to $15 per square foot in certain areas(Rudzinskas, Lutz, &amp; McElhinney, 2017).
   
-  * These policies aim to lower the upfront costs of green roof installation, making it a more feasible option for improving air quality, reducing heat island effects, and enhancing urban green spaces. 
+  * These policies aim to lower the upfront costs of green roof installation, making it a more feasible option for improving air quality, reducing air pollution and heat island effect. 
 
 ]
 
