--- a/index.html
+++ b/index.html
@@ -708,7 +708,7 @@ class: inverse, middle, left
 
 
 # Methodology:
-# Using Remote Sensing for Identifying Rooftop Farming in Jakarta
+# Using Remote Sensing for Identifying Rooftop Farming/Gardening Potentials in Jakarta
 
 
 
@@ -806,22 +806,24 @@ class: inverse, middle, left
 
 
 .panelset[
-.panel[.panel-name[Workpack]
-
-&lt;img src="images/WP_Breakdown.png" height="380px"/&gt;
-
+.panel[.panel-name[Workpack Breakdown]
+&lt;p align="center"&gt;
+&lt;img src="images/WP_Breakdown.png" height="400px"/&gt;
+&lt;/p&gt;
 ]
 
 .panel[.panel-name[WBS]
 
-&lt;img src="images/WBS.png" height="400px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
+&lt;img src="images/WBS.png" height="450px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
 
 ]
 
 .panel[.panel-name[Gantt Chart]
 
-&lt;img src="images/gantt.png" height="350px"/&gt;
+&lt;p align="center"&gt;
 
+&lt;img src="images/gantt.png" height="400px"/&gt;
+&lt;/p&gt;
 ]
 
 
@@ -847,10 +849,11 @@ class: inverse, middle, left
 
 Part of the source data are published [here](https://ee-derekding727.projects.earthengine.app/view/jakartabuidlingandndvilookup) for preview.
 
+&lt;p align="center"&gt;
 
 &lt;iframe width="800" height="430" src="https://www.youtube.com/embed/iyGOVL74P30?si=MIp52Ks1F9r2Ypmh" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen&gt;&lt;/iframe&gt;
 
-
+&lt;/p&gt;
 
 
 
