fixed fonts and image size

--- a/index.html
+++ b/index.html
@@ -382,12 +382,12 @@ class: inverse, middle, left
 .panel[.panel-name[NYC]
 
 .pull-left[
-  &lt;img src="images/Case study_Motivation/casestudy1.jpeg"
+  &lt;img src="images/Case study_Motivation/nyc.jpg"
   height="270px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
   
   &lt;div style="font-size: 14px;"&gt; &lt;!-- The image source font size --&gt;
-  blablabla blablabla description blablabla Source: &lt;a
-  href="http://sigitkusumawijaya.com/?portfolios=green-boarding-house"
+  Vice Media’s 15,000sf green roof by Brooklyn Grange on Source: &lt;a
+  href="https://www.brooklyngrangefarm.com/commercial/vice-media"
   style="color: #7910FF;"&gt;Originally from blabla, picture name&lt;/a&gt; &lt;!-- Hyper color --&gt;
   &lt;!-- 额外图源记得写一下描述 --&gt;
   &lt;/div&gt;
@@ -429,9 +429,7 @@ class: inverse, middle, left
   
   &lt;br&gt; &lt;!-- 空行做排版，可自行删除 --&gt;
   &lt;br&gt;
-  
-  
-  * "Santri (Islamic boarding school students) can also learn urban farming methods...
+
 
 ]
 
@@ -723,18 +721,22 @@ class: inverse, middle, left
 &lt;/div&gt;
 
 # Methodology Overview
-
+&lt;p align="center"&gt;
+&lt;img src="images/methodology/methodology_overview.png" height="530px"/&gt;
+&lt;/p&gt;
 
 
 ---
 
-# Data Architecture
+# Modeling Architecture
 
 &lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
   &lt;img src="images/team_logo.png" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
 
-
+&lt;p align="center"&gt;
+&lt;img src="images/methodology/ML_Overview.png" height="510px"/&gt;
+&lt;/p&gt;
 
 ---
 # Project Data Source
