--- a/index.html
+++ b/index.html
@@ -384,22 +384,29 @@ class: inverse, middle, left
   height="270px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
   
   &lt;div style="font-size: 14px;"&gt; &lt;!-- The image source font size --&gt;
-  Vice Media’s 15,000sf green roof by Brooklyn Grange on Source: &lt;a
+  Vice Media’s 15,000sf green roof by Brooklyn Grange. Source: &lt;a
   href="https://www.brooklyngrangefarm.com/commercial/vice-media"
-  style="color: #7910FF;"&gt;Originally from blabla, picture name&lt;/a&gt; &lt;!-- Hyper color --&gt;
+  style="color: #7910FF;"&gt;Brooklyn Grange&lt;/a&gt; &lt;!-- Hyper color --&gt;
   &lt;!-- 额外图源记得写一下描述 --&gt;
   &lt;/div&gt;
 ]
 
 .pull-right[
-  * NYC New Green Roof Law
+  
+  * Policy Instruments: Tax Abatement Eligibility (PTA3).
   
   
-  * Urban farming has long become common practice on idle plots of land in cities, but today...
+  * Legislation: Local Law 92 of 2019 and Local Law 94 of 2019: Green and Solar Roof Requirements for New Buildings and Complete Roof Replacements. Source: &lt;a
+  href="https://www.nyc.gov/assets/buildings/pdf/green_roof_solar_ll92-n-94of2019_sn.pdf"
+  style="color: #7910FF;"&gt;New York Buildings&lt;/a&gt;
   
-  * Sigit, who runs his own company named sigit.kusumawijaya, ...
   
-  * By function, he says, rooftop gardens brimming with decorative plants...
+  * Analysis by Tong et al. (2016) indicates a 7% to 33% PM2.5 reduction in the selected neighbourhood in Brooklyn.
+  
+  
+  * City-wide initiative launched by NYC Department of City Planning:&lt;a
+  href="https://www.nyc.gov/site/agriculture/faqs/frequently-asked-questions.page"
+  style="color: #7910FF;"&gt; Zone Green&lt;/a&gt;, estimated to improve urban resilience, improve well-being and quality of life.(Beaupre, 2017)
 
 ]
 
@@ -421,7 +428,11 @@ class: inverse, middle, left
 ]
 
 .pull-right[
-  * Manchester developed a green roof strategy- Sustainable Cities: Options for Responding to Climate Change Impacts and Outcomes (SCORCHIO). Partnering with Manchester University, the project utilised an Urban Heat Island map to identify city areas susceptible to elevated temperatures exacerbated by climate change. 
+  * Manchester developed a green roof strategy- Sustainable Cities: Options for Responding to Climate Change Impacts and Outcomes (SCORCHIO). 
+  
+  
+  * Partnering with Manchester University, the project utilised an Urban Heat Island map to identify city areas susceptible to elevated temperatures exacerbated by climate change. 
+  
   
   * Public buildings were selected as pilot projects for green roof retrofitting, focusing on reducing the heat island effect and air pollution. 
   
@@ -449,7 +460,8 @@ class: inverse, middle, left
 ]
 
 .pull-right[
-  * Incentive programs, the one launched in Washington D.C., offer financial support to building owners for installing green roofs, providing up to $15 per square foot in certain areas(Rudzinskas, Lutz, &amp; McElhinney, 2017).
+  * Incentive programs, the one launched in Washington D.C., offer financial support to building owners for installing green roofs, providing up to $15 per square foot in certain areas (Rudzinskas, Lutz, &amp; McElhinney, 2017).
+  
   
   * These policies aim to lower the upfront costs of green roof installation, making it a more feasible option for improving air quality, reducing air pollution and heat island effect. 
 
@@ -737,11 +749,95 @@ class: inverse, middle, left
 &lt;/p&gt;
 
 ---
-# Project Data Source
+# Project Data Source 1
 
 &lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
   &lt;img src="images/team_logo.png" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
+
+
+ &lt;table&gt;
+  &lt;tr&gt;
+    &lt;td&gt;Data Type&lt;/td&gt;
+    &lt;td&gt;Potential Dataset&lt;/td&gt;
+    &lt;td&gt;Access&lt;/td&gt;
+    &lt;td&gt;Temporal Resolution&lt;/td&gt;
+    &lt;td&gt;Spatial Resolution&lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+    &lt;td&gt;Building Footprint Data&lt;/td&gt;
+    &lt;td&gt;Google's Open Buildings Dataset, Jakarta Building Records, Crowd-sourced World-wide Building Footprint (See et al., 2022), BIM (Building Information Model) &lt;/td&gt;
+    &lt;td&gt;Open-source&lt;/td&gt;
+    &lt;td&gt;14&lt;/td&gt;
+    &lt;td&gt;10&lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+    &lt;td&gt;Urban Temperature&lt;/td&gt;
+    &lt;td&gt;MODIS, Jakarta’s Historical Temperature Data&lt;/td&gt;
+    &lt;td&gt;Open-source&lt;/td&gt;
+    &lt;td&gt;14&lt;/td&gt;
+    &lt;td&gt;10&lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+    &lt;td&gt;Weather&lt;/td&gt;
+    &lt;td&gt;Global Forecast System (GFS), Jakarta Weather Data&lt;/td&gt;
+    &lt;td&gt;Open-source&lt;/td&gt;
+    &lt;td&gt;14&lt;/td&gt;
+    &lt;td&gt;10&lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+    &lt;td&gt;Rainfall&lt;/td&gt;
+    &lt;td&gt;Multi-satellite Retrievals for GPM (IMERG), Jakarta ground rainfall records&lt;/td&gt;
+    &lt;td&gt;Open-source&lt;/td&gt;
+    &lt;td&gt;14&lt;/td&gt;
+    &lt;td&gt;10&lt;/td&gt;
+  &lt;/tr&gt;
+&lt;/table&gt; 
+---
+# Project Data Source 2
+
+&lt;div style="position: absolute; top: 20px; right: 40px;"&gt;
+  &lt;img src="images/team_logo.png" alt="Logo" style="height: 75px; width: auto;"&gt;
+&lt;/div&gt;
+
+&lt;table&gt;
+  &lt;tr&gt;
+    &lt;td&gt;Air Quality&lt;/td&gt;
+    &lt;td&gt;Sentinel-5P, Air quality data of Jakarta&lt;/td&gt;
+    &lt;td&gt;Open-source&lt;/td&gt;
+    &lt;td&gt;14&lt;/td&gt;
+    &lt;td&gt;10&lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+    &lt;td&gt;High resolution Satellite SAR/ Optiacal Imagery&lt;/td&gt;
+    &lt;td&gt;Landsat 8/9, Sentinel-2/Sentinel-1, and Other Commercial Data&lt;/td&gt;
+    &lt;td&gt;Open-source&lt;/td&gt;
+    &lt;td&gt;14&lt;/td&gt;
+    &lt;td&gt;10&lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+    &lt;td&gt;Other Environment Data&lt;/td&gt;
+    &lt;td&gt;Humidity, Historical Vegetation Coverage Data, Light Pollution Data etc.&lt;/td&gt;
+    &lt;td&gt;Open-source&lt;/td&gt;
+    &lt;td&gt;14&lt;/td&gt;
+    &lt;td&gt;10&lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+    &lt;td&gt;Existing Land Use Data&lt;/td&gt;
+    &lt;td&gt;Latest LULC Dataset (Putri, Abadi and Kafafa, 2020)&lt;/td&gt;
+    &lt;td&gt;Open-source&lt;/td&gt;
+    &lt;td&gt;14&lt;/td&gt;
+    &lt;td&gt;10&lt;/td&gt;
+  &lt;/tr&gt;
+  &lt;tr&gt;
+    &lt;td&gt;Census Data&lt;/td&gt;
+    &lt;td&gt;14&lt;/td&gt;
+    &lt;td&gt;Open-source&lt;/td&gt;
+    &lt;td&gt;14&lt;/td&gt;
+    &lt;td&gt;10&lt;/td&gt;
+  &lt;/tr&gt;
+&lt;/table&gt; 
+
 
 
 
