--- a/index.html
+++ b/index.html
@@ -1063,12 +1063,12 @@ Part of the source data are published [here](https://ee-derekding727.projects.ea
 .panelset[
 .panel[.panel-name[Data Source]
 ### Potential Issues
-* Visual signal might not contribute to the understanding of the physical structure. &lt;span style="color: red; font-weight: bold;"&gt;Roof load bearing capacity data&lt;/span&gt; might be difficult to obtain.
+* Visual signal might not contribute to the understanding of the physical structure. **Roof load bearing capacity data** might be difficult to obtain.
 
 ### Mitigation 
-* Consulting with &lt;span style="color: blue; font-weight: bold;"&gt;civil&lt;/span&gt; and &lt;span style="color: blue; font-weight: bold;"&gt;structural experts&lt;/span&gt;.
+* Consulting with **civil** and **structural experts**.
 
-* Conducting a &lt;span style="color: blue; font-weight: bold;"&gt;field investigation&lt;/span&gt;.
+* Conducting a **field investigation** to supplement our dataset.
 
 ]
 
@@ -1088,17 +1088,17 @@ Part of the source data are published [here](https://ee-derekding727.projects.ea
 
 .panel[.panel-name[Regulation]
 ### Potential Issues
-* &lt;span style="color: red; font-weight: bold;"&gt;Governance:&lt;/span&gt; &lt;span style="color: red; font-weight: bold;"&gt;Local policies (bylaws)&lt;/span&gt; could potentially lead to some areas being &lt;span style="color: red; font-weight: bold;"&gt;inaccessible for results&lt;/span&gt;.
+* **Governance: Local policies (bylaws)** could potentially lead to some areas being **inaccessible for results**.
 
-* &lt;span style="color: red; font-weight: bold;"&gt;Privacy:&lt;/span&gt; The outcomes may &lt;span style="color: red; font-weight: bold;"&gt;encroach upon private spaces&lt;/span&gt;, leading to reluctance.
+* **Privacy:** The outcomes may **encroach upon private spaces**, leading to reluctance.
 &lt;br&gt;
 
 
 ### Mitigation 
-* &lt;span style="color: blue; font-weight: bold;"&gt;Early engagement with stakeholders&lt;/span&gt; involves them in the decision-making process through community workshops, online forums, etc.
+* **Early engagement with stakeholders** involves them in the decision-making process through community workshops, online forums, etc.
 
 
-* Actively engage with &lt;span style="color: blue; font-weight: bold;"&gt;public opinion&lt;/span&gt; and incorporate &lt;span style="color: blue; font-weight: bold;"&gt;community feedback&lt;/span&gt; through public consultation, social media interactions, etc.
+* Actively engage with **public opinion** and incorporate **community feedback** through public consultation, social media interactions, etc.
 
 ]
 
@@ -1114,9 +1114,9 @@ Part of the source data are published [here](https://ee-derekding727.projects.ea
 
 
 ### Mitigation
-* Alternative Personnel Reserve list, Cross-trained.
+* Alternative Personnel Reserve list.
 
-* Regular maintenance.
+* Regular maintenance of equipment.
 
 * Buffer time, Additional plan.
 
@@ -1151,14 +1151,14 @@ Part of the source data are published [here](https://ee-derekding727.projects.ea
 
 .pull-right[
 ### Other contributions
-* Drive &lt;span style="color: blue; font-weight: bold;"&gt;economic growth&lt;/span&gt;
-  * potential increase in &lt;span style="color: blue; font-weight: bold;"&gt;job opportunities&lt;/span&gt; and &lt;span style="color: blue; font-weight: bold;"&gt;economic activities&lt;/span&gt;
+* Drive **economic growth**
+  * potential increase in **job opportunities** and **economic activities**
   
-  * &lt;span style="color: blue; font-weight: bold;"&gt;urban regeneration&lt;/span&gt; (develop attractions, building price appreciation, etc)
+  * **urban regeneration** (develop attractions, building price appreciation, etc)
   
-* Effectively utilizing &lt;span style="color: blue; font-weight: bold;"&gt;urban spaces&lt;/span&gt;
+* Effectively utilizing **urban spaces**
 
-* Engage with the &lt;span style="color: blue; font-weight: bold;"&gt;Quadruple Helix&lt;/span&gt;
+* Engage with the **Quadruple Helix**
 
 ]
 
@@ -1172,18 +1172,18 @@ Part of the source data are published [here](https://ee-derekding727.projects.ea
 
 &lt;br&gt;
 
-* Delving deeper into &lt;span style="color: blue; font-weight: bold;"&gt;Rooftop Agriculture&lt;/span&gt;.
+* Delving deeper into **Rooftop Agriculture**.
   * Fine-grained recognition
   
   * Our Rooftop index + Assigning optimal crops
 
 &lt;br&gt;
 
-* Our method has &lt;span style="color: blue; font-weight: bold;"&gt;high reproducibility&lt;/span&gt; and can be applied to other similar cities.
+* Our method has **high reproducibility** and can be applied to other similar cities.
 
 &lt;br&gt;
 
-* &lt;span style="color: blue; font-weight: bold;"&gt;Rooftop vegetation efficacy monitoring and evaluation&lt;/span&gt;
+* **Rooftop vegetation efficacy monitoring and evaluation**
   * Feedback for continuous urban temperature and air quality improvement.
   
   * Based on feedback, optimizing the model.
