--- a/index.html
+++ b/index.html
@@ -1136,15 +1136,17 @@ Part of the source data are published [here](https://ee-derekding727.projects.ea
 
 .pull-left[
 ### Main contributions
-* Holistic solution for Jakarta: Rooftop Farming and Gardening, with a primary emphasis on significantly reducing air pollution.
+* Address the various challenges in Jakarta with a **holistic solution: Rooftop Farming and Gardening**
 
-* Directly target **air quality improvement** to tackle urban pollution effectively.
+* Directly target **air quality improvement**
 
-* Additionally, mitigate the Urban Heat Island Effect and **enhance urban climate resilience**.
+* **Enhance urban climate resilience**
 
-* Indirectly **address potential food insecurity** through urban agriculture initiatives.
+* Indirectly **address potential food insecurity**
 
-* **Share insights and data**: Rooftop Index + Open-source our dataset and model.
+* Improvement in **resident satisfaction** and **quality of life**
+
+* **Share insights and data**: Rooftop Index + Open-source our dataset and model
 
 
 ]
