--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@ class: inverse, middle, left
   &lt;/tr&gt;
   &lt;tr&gt;
     &lt;td&gt;Other Environment Data&lt;/td&gt;
-    &lt;td&gt;Humidity, Historical Vegetation Coverage Data, Light Pollution Data etc.&lt;/td&gt;
+    &lt;td&gt;Wind Speed Data, Humidity, Historical Vegetation Coverage Data, Light Pollution Data etc.&lt;/td&gt;
     &lt;td&gt;Open-source&lt;/td&gt;
     &lt;td&gt;Various resolutions&lt;/td&gt;
    
