--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="" xml:lang="">
   <head>
-    <title>Green Rooftop - Remote Sensing for Identifying Rooftop Farming and Gardening Potentials in Jakarta, Indonesia</title>
+    <title>Remote Sensing for Identifying Rooftop Farming and Gardening Potentials in Jakarta, Indonesia</title>
     <meta charset="utf-8" />
     <meta name="author" content="Sheng Hu, Zhaowei Cui, Lunan Wei, Mengyu Ding" />
     <script src="libs/header-attrs/header-attrs.js"></script>
@@ -18,7 +18,7 @@
 class: center, middle, inverse, title-slide
 
 .title[
-# Green Rooftop - Remote Sensing for Identifying Rooftop Farming and Gardening Potentials in Jakarta, Indonesia
+# Remote Sensing for Identifying Rooftop Farming and Gardening Potentials in Jakarta, Indonesia
 ]
 .author[
 ### Sheng Hu, Zhaowei Cui, Lunan Wei, Mengyu Ding
