testing download link 01

--- a/index.html
+++ b/index.html
@@ -764,8 +764,8 @@ class: inverse, middle, left
 &lt;img src="images/methodology/methodology_overview.png" height="515px"/&gt;
 &lt;/p&gt;
 
-.foognote[Original file available: &lt;a href="/illustrations/methodology_overview.pdf" download="methodology_overview.pdf" &gt;
-  &lt;img src="/icons/pdf_icon.png" height="18px" alt="Download Original"&gt;
+.foognote[Original file available: &lt;a href="illustrations/methodology_overview.pdf" download="methodology_overview.pdf" &gt;
+  &lt;img src="icons/pdf_icon.png" height="18px" alt="Download Original"&gt;
 &lt;/a&gt;]
 
 ---
