download link another way

--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@ class: inverse, middle, left
 &lt;/p&gt;
 
 .foognote[Original file available: &lt;a href="illustrations/methodology_overview.pdf" download="methodology_overview.pdf" &gt;
-  &lt;img src="icons/pdf_icon.png" height="18px" alt="Download Original"&gt;
+  &lt;img src="https://raw.githubusercontent.com/dereksgithub/group_RS_casa0023/a21fb1ab0c2bc3f1171a7fc73f6f656f7974e71f/icons/pdf_icon.png" height="18px" alt="Download Original"&gt;
 &lt;/a&gt;]
 
 ---
