fixed download link

--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@ class: inverse, middle, left
 
 # Methodology Overview
 &lt;p align="center"&gt;
-&lt;img src="images/methodology/methodology_overview.png" height="515px"/&gt;
+&lt;img src="images/methodology/methodology_overview.png" height="505px"/&gt;
 &lt;/p&gt;
 
 .foognote[Original file available: &lt;a href="illustrations/methodology_overview.pdf" download="methodology_overview.pdf" &gt;
@@ -777,11 +777,11 @@ class: inverse, middle, left
 &lt;/div&gt;
 
 &lt;p align="center"&gt;
-&lt;img src="images/methodology/ML_Overview.png" height="515px"/&gt;
+&lt;img src="images/methodology/ML_Overview.png" height="505px"/&gt;
 &lt;/p&gt;
 
-.foognote[Original file available: &lt;a href="/illustrations/ML.pdf" download="ml.pdf" &gt;
-  &lt;img src="/icons/pdf_icon.png" height="18px" alt="Download Original"&gt;
+.foognote[Original file available: &lt;a href="illustrations/ML.pdf" download="ml.pdf" &gt;
+  &lt;img src="https://raw.githubusercontent.com/dereksgithub/group_RS_casa0023/a21fb1ab0c2bc3f1171a7fc73f6f656f7974e71f/icons/pdf_icon.png" height="18px" alt="Download Original"&gt;
 &lt;/a&gt;]
 
 
@@ -903,22 +903,22 @@ class: inverse, middle, left
 .panel[.panel-name[Data Value]
 
 
-&lt;img src="images/data_value_chain.png" height="350px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
+&lt;img src="images/data_value_chain.png" height="380px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
 
 
 
-.foognote[Original file available: &lt;a href="/illustrations/data_abstract.pdf" download="data_concept.pdf" &gt;
-&lt;img src="/icons/pdf_icon.png" height="18px" alt="Download Original"&gt;
+.foognote[Original file available: &lt;a href="illustrations/data_abstract.pdf" download="data_concept.pdf" &gt;
+&lt;img src="https://raw.githubusercontent.com/dereksgithub/group_RS_casa0023/a21fb1ab0c2bc3f1171a7fc73f6f656f7974e71f/icons/pdf_icon.png" height="18px" alt="Download Original"&gt;
 &lt;/a&gt;]
 
-
+]
 
 .panel[.panel-name[Data Flow]
 
 &lt;img src="images/dataflow.png" height="380px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
 
 ]
-]
+
 ]
 
 
@@ -938,11 +938,23 @@ class: inverse, middle, left
 
 &lt;img src="images/SWOTUpdate.png" height="450px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
 
+.foognote[Original file available: &lt;a href="illustrations/swot.pdf" download="swot.pdf" &gt;
+  &lt;img src="https://raw.githubusercontent.com/dereksgithub/group_RS_casa0023/a21fb1ab0c2bc3f1171a7fc73f6f656f7974e71f/icons/pdf_icon.png" height="18px" alt="Download Original"&gt;
+&lt;/a&gt;]
+
+
 ]
 
 .panel[.panel-name[Feasibility]
 
 &lt;img src="images/FeasibilityUpdate.png" height="500px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
+
+
+.foognote[Original file available: &lt;a href="illustrations/feasibility.pdf" download="feasibility.pdf" &gt;
+  &lt;img src="https://raw.githubusercontent.com/dereksgithub/group_RS_casa0023/a21fb1ab0c2bc3f1171a7fc73f6f656f7974e71f/icons/pdf_icon.png" height="18px" alt="Download Original"&gt;
+&lt;/a&gt;]
+
+
 
 ]
 
@@ -964,8 +976,8 @@ class: inverse, middle, left
 &lt;img src="images/WP_Breakdown.png" height="400px"/&gt;
 &lt;/p&gt;
 
-.foognote[Original file available: &lt;a href="/illustrations/wp.pdf" download="wp.pdf" &gt;
-  &lt;img src="/icons/pdf_icon.png" height="18px" alt="Download Original"&gt;
+.foognote[Original file available: &lt;a href="illustrations/wp.pdf" download="wp.pdf" &gt;
+  &lt;img src="https://raw.githubusercontent.com/dereksgithub/group_RS_casa0023/a21fb1ab0c2bc3f1171a7fc73f6f656f7974e71f/icons/pdf_icon.png" height="18px" alt="Download Original"&gt;
 &lt;/a&gt;]
 
 
@@ -975,8 +987,8 @@ class: inverse, middle, left
 
 &lt;img src="images/WBS.png" height="450px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
 
-.foognote[Original file available: &lt;a href="/illustrations/wbs.pdf" download="wbs.pdf" &gt;
-  &lt;img src="/icons/pdf_icon.png" height="18px" alt="Download Original"&gt;
+.foognote[Original file available: &lt;a href="illustrations/wbs.pdf" download="wbs.pdf" &gt;
+  &lt;img src="https://raw.githubusercontent.com/dereksgithub/group_RS_casa0023/a21fb1ab0c2bc3f1171a7fc73f6f656f7974e71f/icons/pdf_icon.png" height="18px" alt="Download Original"&gt;
 &lt;/a&gt;]
 
 
@@ -992,8 +1004,8 @@ class: inverse, middle, left
 &lt;/p&gt;
 
 
-.foognote[Original file available: &lt;a href="/illustrations/gantt.pdf" download="gantt.pdf" &gt;
-  &lt;img src="/icons/pdf_icon.png" height="18px" alt="Download Original"&gt;
+.foognote[Original file available: &lt;a href="illustrations/gantt.pdf" download="gantt.pdf" &gt;
+  &lt;img src="https://raw.githubusercontent.com/dereksgithub/group_RS_casa0023/a21fb1ab0c2bc3f1171a7fc73f6f656f7974e71f/icons/pdf_icon.png" height="18px" alt="Download Original"&gt;
 &lt;/a&gt;]
 
 
@@ -1018,11 +1030,23 @@ class: inverse, middle, left
 
 &lt;img src="images/personnelBudgetImage.png" height="400px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
 
+.foognote[Original file available: &lt;a href="illustrations/budget_personnel.pdf" download="budget_personnel.pdf" &gt;
+  &lt;img src="https://raw.githubusercontent.com/dereksgithub/group_RS_casa0023/a21fb1ab0c2bc3f1171a7fc73f6f656f7974e71f/icons/pdf_icon.png" height="18px" alt="Download Original"&gt;
+&lt;/a&gt;]
+
+
+
 ]
 
 .panel[.panel-name[Other Budget]
 
 &lt;img src="images/otherBudgetImage.png" height="450px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
+
+.foognote[Original file available: &lt;a href="illustrations/budget_other.pdf" download="budget_other.pdf" &gt;
+  &lt;img src="https://raw.githubusercontent.com/dereksgithub/group_RS_casa0023/a21fb1ab0c2bc3f1171a7fc73f6f656f7974e71f/icons/pdf_icon.png" height="18px" alt="Download Original"&gt;
+&lt;/a&gt;]
+
+
 
 ]
 
