--- a/index.html
+++ b/index.html
@@ -936,9 +936,9 @@ class: inverse, middle, left
 .panelset[
 .panel[.panel-name[SWOT]
 
-&lt;img src="images/SWOTUpdate.png" height="450px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
+&lt;img src="images/SWOTUpdate.png" height="440px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
 
-.foognote[Original file available: &lt;a href="illustrations/swot.pdf" download="swot.pdf" &gt;
+.foognote[Original file available: &lt;a href="illustrations/swot.pdf" download="swot_feasibility.pdf" &gt;
   &lt;img src="https://raw.githubusercontent.com/dereksgithub/group_RS_casa0023/a21fb1ab0c2bc3f1171a7fc73f6f656f7974e71f/icons/pdf_icon.png" height="18px" alt="Download Original"&gt;
 &lt;/a&gt;]
 
@@ -948,12 +948,6 @@ class: inverse, middle, left
 .panel[.panel-name[Feasibility]
 
 &lt;img src="images/FeasibilityUpdate.png" height="500px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
-
-
-.foognote[Original file available: &lt;a href="illustrations/feasibility.pdf" download="feasibility.pdf" &gt;
-  &lt;img src="https://raw.githubusercontent.com/dereksgithub/group_RS_casa0023/a21fb1ab0c2bc3f1171a7fc73f6f656f7974e71f/icons/pdf_icon.png" height="18px" alt="Download Original"&gt;
-&lt;/a&gt;]
-
 
 
 ]
@@ -985,7 +979,7 @@ class: inverse, middle, left
 
 .panel[.panel-name[WBS]
 
-&lt;img src="images/WBS.png" height="450px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
+&lt;img src="images/WBS.png" height="440px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
 
 .foognote[Original file available: &lt;a href="illustrations/wbs.pdf" download="wbs.pdf" &gt;
   &lt;img src="https://raw.githubusercontent.com/dereksgithub/group_RS_casa0023/a21fb1ab0c2bc3f1171a7fc73f6f656f7974e71f/icons/pdf_icon.png" height="18px" alt="Download Original"&gt;
@@ -1040,7 +1034,7 @@ class: inverse, middle, left
 
 .panel[.panel-name[Other Budget]
 
-&lt;img src="images/otherBudgetImage.png" height="450px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
+&lt;img src="images/otherBudgetImage.png" height="440px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
 
 .foognote[Original file available: &lt;a href="illustrations/budget_other.pdf" download="budget_other.pdf" &gt;
   &lt;img src="https://raw.githubusercontent.com/dereksgithub/group_RS_casa0023/a21fb1ab0c2bc3f1171a7fc73f6f656f7974e71f/icons/pdf_icon.png" height="18px" alt="Download Original"&gt;
