--- a/index.html
+++ b/index.html
@@ -793,7 +793,7 @@ class: inverse, middle, left
   &lt;img src="images/team_logo.png" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
 
-&lt;br&gt;
+
  &lt;table&gt;
   &lt;tr&gt;
     &lt;td&gt;Data Type&lt;/td&gt;
@@ -840,7 +840,7 @@ class: inverse, middle, left
   &lt;img src="images/team_logo.png" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
 
-&lt;br&gt;
+
 &lt;table&gt;
   &lt;tr&gt;
     &lt;td&gt;Data Type&lt;/td&gt;
@@ -967,10 +967,10 @@ class: inverse, middle, left
 .panelset[
 .panel[.panel-name[Workpack Breakdown]
 &lt;p align="center"&gt;
-&lt;img src="images/WP_Breakdown.png" height="400px"/&gt;
+&lt;img src="images/WP_Breakdown.png" height="410px"/&gt;
 &lt;/p&gt;
 
-.foognote[Original file available: &lt;a href="illustrations/wp.pdf" download="wp.pdf" &gt;
+.foognote[Original file available: &lt;a href="illustrations/pm_all.pdf" download="pm_all.pdf" &gt;
   &lt;img src="https://raw.githubusercontent.com/dereksgithub/group_RS_casa0023/a21fb1ab0c2bc3f1171a7fc73f6f656f7974e71f/icons/pdf_icon.png" height="18px" alt="Download Original"&gt;
 &lt;/a&gt;]
 
@@ -979,11 +979,8 @@ class: inverse, middle, left
 
 .panel[.panel-name[WBS]
 
-&lt;img src="images/WBS.png" height="440px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
+&lt;img src="images/WBS.png" height="455px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
 
-.foognote[Original file available: &lt;a href="illustrations/wbs.pdf" download="wbs.pdf" &gt;
-  &lt;img src="https://raw.githubusercontent.com/dereksgithub/group_RS_casa0023/a21fb1ab0c2bc3f1171a7fc73f6f656f7974e71f/icons/pdf_icon.png" height="18px" alt="Download Original"&gt;
-&lt;/a&gt;]
 
 
 
@@ -998,9 +995,7 @@ class: inverse, middle, left
 &lt;/p&gt;
 
 
-.foognote[Original file available: &lt;a href="illustrations/gantt.pdf" download="gantt.pdf" &gt;
-  &lt;img src="https://raw.githubusercontent.com/dereksgithub/group_RS_casa0023/a21fb1ab0c2bc3f1171a7fc73f6f656f7974e71f/icons/pdf_icon.png" height="18px" alt="Download Original"&gt;
-&lt;/a&gt;]
+
 
 
 ]
@@ -1022,9 +1017,9 @@ class: inverse, middle, left
 .panelset[
 .panel[.panel-name[Personnel Budget]
 
-&lt;img src="images/personnelBudgetImage.png" height="400px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
+&lt;img src="images/personnelBudgetImage.png" height="390px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
 
-.foognote[Original file available: &lt;a href="illustrations/budget_personnel.pdf" download="budget_personnel.pdf" &gt;
+.foognote[Original file available: &lt;a href="illustrations/budget_all.pdf" download="budget_all.pdf" &gt;
   &lt;img src="https://raw.githubusercontent.com/dereksgithub/group_RS_casa0023/a21fb1ab0c2bc3f1171a7fc73f6f656f7974e71f/icons/pdf_icon.png" height="18px" alt="Download Original"&gt;
 &lt;/a&gt;]
 
@@ -1035,11 +1030,6 @@ class: inverse, middle, left
 .panel[.panel-name[Other Budget]
 
 &lt;img src="images/otherBudgetImage.png" height="440px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
-
-.foognote[Original file available: &lt;a href="illustrations/budget_other.pdf" download="budget_other.pdf" &gt;
-  &lt;img src="https://raw.githubusercontent.com/dereksgithub/group_RS_casa0023/a21fb1ab0c2bc3f1171a7fc73f6f656f7974e71f/icons/pdf_icon.png" height="18px" alt="Download Original"&gt;
-&lt;/a&gt;]
-
 
 
 ]
