--- a/index.html
+++ b/index.html
@@ -598,26 +598,29 @@ Rooftop agriculture projects often attract community participation, fostering co
 
 
 
+.pull-left[
 
 
-### Air Pollution
 
 * **Strategy for Air Pollution Control** (SPPU)
 
 * **Green open space masterplan at Jakarta Capital City**, Indonesia for climate change mitigation. Jakarta Government Plans to Add **800** Green Open Spaces to Deal with Air Pollution in 2023.
 
 
-
-### Urban Agriculture
-
-
 * In 2017, the city of Jakarta initiated a **peri-urban farming program** under its **Urban Agriculture Program** that aimed to achieve sustainable agricultural production, rural economic sustainability and long-term environmental sustainability.
 
 
+]
 
 
 
+.pull-right[
 
+  &lt;img src="images/seals.jpg"
+  height="400px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
+
+
+]
 
 
 
