--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@ Rooftop agriculture projects often attract community participation, fostering co
 
 
 
-# Current Policy
+# Current Policy Stack
 
 
 
