--- a/index.html
+++ b/index.html
@@ -1097,7 +1097,7 @@ Part of the source data are published [here](https://ee-derekding727.projects.ea
 ]
 
 
-.panel[.panel-name[Regulation]
+.panel[.panel-name[Ethical/Legal]
 ### Potential Issues
 * **Governance: Local policies (bylaws)** could potentially lead to some areas being **inaccessible for results**.
 
