--- a/index.html
+++ b/index.html
@@ -1109,7 +1109,7 @@ Part of the source data are published [here](https://ee-derekding727.projects.ea
 * **Early engagement with stakeholders** involves them in the decision-making process through community workshops, online forums, etc.
 
 
-* Actively engage with **public opinion** and incorporate **community feedback** through public consultation, social media interactions, etc.
+* Advocate for an approach that emphasizes community participation.
 
 ]
 
