--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ class: center, middle, inverse, title-slide
 ### CASA, UCL
 ]
 .date[
-### 2024/02/04 (updated: 2024-03-18)
+### 2024/02/04 (updated: 2024-03-19)
 ]
 
 ---
@@ -1038,9 +1038,14 @@ class: inverse, middle, left
 ]
 
 
+.panel[.panel-name[Total Budget]
+
+&lt;img src="images/workBudgetTotal.png" height="370px" style="display: block; margin-left: auto; margin-right: auto;"/&gt;
+
+The **total budget** of the project is **Personnel Budget** + **Other Budget** = **£302,000**
+
 ]
-
-
+]
 
 
 ---
