--- a/index.html
+++ b/index.html
@@ -1291,7 +1291,7 @@ Zambrano-Prado, P., Muñoz-Liesa, J., Josa, A., Rieradevall, J., Alamús, R., Ga
 
 class: inverse, center, middle
 
-# Thanks!
+# Thank you!
 
 &lt;br&gt;
 ## Q &amp; A
