more typos fixed!

--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@ class: inverse, middle, left
     &lt;td&gt;Urban Temperature&lt;/td&gt;
     &lt;td&gt;MODIS, Jakarta’s Historical Temperature Data&lt;/td&gt;
     &lt;td&gt;Open-source&lt;/td&gt;
-    &lt;td&gt;MODIS: Daily to Monthly, Bands 1–2 – 250 meter. Bands 3–7 – 500 meter. Bands 8–36 – 1000 meter&lt;/td&gt;
+    &lt;td&gt;MODIS: Daily to Monthly, Bands 1–2: 250 meter. Bands 3–7: 500 meter. Bands 8: 36 – 1000 meter&lt;/td&gt;
     
   &lt;/tr&gt;
   &lt;tr&gt;
@@ -868,7 +868,7 @@ class: inverse, middle, left
     &lt;td&gt;Air Quality&lt;/td&gt;
     &lt;td&gt;Sentinel-5P, Air quality data of Jakarta&lt;/td&gt;
     &lt;td&gt;Open-source&lt;/td&gt;
-    &lt;td&gt;Sent 5P: daily, 5.5km x 3.5 km. Other Commercial Remote Sensing Data Air Quality Data. Ground Sensor Data: i.e. AQI(Lead: annual 0.50 μg/m3; PM 2.5: daily 25 μg/m3; PM10: daily 8 μg/m3; SO2: daily 0.02 ppm; NO2: daily 0.12 ppm; etc.),
+    &lt;td&gt;Sent 5P: daily, 5.5km x 3.5 km. Other Commercial Remote Sensing Data Air Quality Data. Ground Sensor Data: i.e. AQI (Lead: annual 0.50 μg/m3; PM 2.5: daily 25 μg/m3; PM10: daily 8 μg/m3; SO2: daily 0.02 ppm; NO2: daily 0.12 ppm; etc.),
    
   
   &lt;/tr&gt;
@@ -892,7 +892,7 @@ class: inverse, middle, left
     &lt;td&gt;Rainfall&lt;/td&gt;
     &lt;td&gt;Multi-satellite Retrievals for GPM (IMERG), Jakarta ground rainfall records&lt;/td&gt;
     &lt;td&gt;Open-source&lt;/td&gt;
-    &lt;td&gt;0.1 millimeters (mm) per month&lt;/td&gt;
+    &lt;td&gt;0.1 millimeters (mm) | per month&lt;/td&gt;
   &lt;/tr&gt;
   &lt;tr&gt;
     &lt;td&gt;High resolution Satellite SAR/ Optiacal Imagery&lt;/td&gt;
