--- a/index.html
+++ b/index.html
@@ -474,15 +474,6 @@ class: inverse, middle, left
 
 
 
----
-
-class: inverse, middle, left
-
-# Solution:
-
-# Rooftop Farming and Gardening
-
-
 
 
 ---
@@ -494,6 +485,25 @@ class: inverse, middle, left
 
 
 .panelset[
+
+
+
+
+.panel[.panel-name[Outcomes]
+
+
+
+* #### Capturing pollutants in the air
+* #### Providing shade and evaporative cooling
+* #### Enhancing urban food security
+* #### Utilizing rainwater
+* #### Increasing green spaces 
+* #### Attracting community participation.
+
+
+]
+
+
 
 
 .panel[.panel-name[Air polution]
@@ -583,6 +593,15 @@ Rooftop agriculture projects often attract community participation, fostering co
   &lt;img src="images/team_logo.png" alt="Logo" style="height: 75px; width: auto;"&gt;
 &lt;/div&gt;
 
+
+
+---
+
+class: inverse, middle, left
+
+# Solution:
+
+# Rooftop Farming and Gardening
 
 
 
